fix: Set.of 改为 Java 8 兼容写法, 修复 JDK 8 编译失败